[package]
name = "minecraftrs"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.derive_more]
version = "0.99.11"
features = ["deref", "deref_mut"]