[package]
name = "minecraftrs"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "Minecraft world generation backend in Rust."
keywords = ["minecraft", "mc", "gen"]
categories = ["games", "mathematics", "accessibility"]

[dependencies]

[dependencies.derive_more]
version = "0.99.11"
features = ["deref", "deref_mut"]

[features]
default = ["release-1-2"]
release-1-2 = []
