[package]
name = "mc-core"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "Minecraft core backend."
keywords = ["minecraft", "mc", "core"]
categories = ["games", "mathematics"]
license = "Apache-2.0"

[features]
default = ["vanilla"]
vanilla = ["vanilla_blocks", "vanilla_biomes"]
vanilla_blocks = []
vanilla_biomes = []

[dependencies]
once_cell = "1.5.2"
strum = { version = "0.20", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "math"
harness = false

[[bench]]
name = "block"
harness = false
