[package]
name = "mc-vanilla"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "MinecraftRS - Implementation of vanilla features for Minecraft, this extends and use mc-core."
keywords = ["minecraft", "mc", "vanilla"]
categories = ["games", "mathematics"]
license = "Apache-2.0"

[features]
vanilla = []

[dependencies]
mc-core = { path = "../core" }
