[package]
name = "mc-worldgen"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "Minecraft world generation backend."
keywords = ["minecraft", "mc", "generation"]
categories = ["games", "mathematics"]
license = "Apache-2.0"

[dependencies]
mc-core = { path = "../core" }

[features]
default = ["release-1-2"]
release-1-2 = []
