[package]
name = "mc-core"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "MinecraftRS - Minimal core implementation of Minecraft backend."
keywords = ["minecraft", "mc", "core"]
categories = ["games", "mathematics"]
license = "Apache-2.0"

[dependencies]
once_cell = "1.5.2"
bit-vec = "0.6.3"
flate2 = "1.0.20"
named-binary-tag = "0.6.0"
crossbeam-channel = "0.5.1"
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["v4"] }
hecs = "0.6.2"
