[package]
name = "mc-runtime"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "MinecraftRS - Backend Minecraft runtime implementation, made to actually run a world."
keywords = ["minecraft", "mc", "runtime"]
categories = ["games", "mathematics"]
license = "Apache-2.0"
publish = false

[dependencies]
mc-core = { path = "../core" }

uuid = "0.8"
hecs = "0.6"

thiserror = "1.0"
spin_sleep = "1.0"
