[package]
name = "mc-vanilla"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "MinecraftRS - Implementation of vanilla features for Minecraft, this extends and use mc-core."
keywords = ["minecraft", "mc", "vanilla"]
categories = ["games", "mathematics"]
license = "Apache-2.0"

[dependencies]
mc-core = { path = "../core" }
mc-runtime = { path = "../runtime" }

named-binary-tag = "0.6"
uuid = "0.8"
