[package]
name = "mc-worldgen"
version = "0.1.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
edition = "2018"
repository = "https://github.com/mindstorm38/minecraftrs"
homepage = "https://github.com/mindstorm38/minecraftrs"
description = "MinecraftRS - Implementation of vanilla Minecraft generation, aims to support multiple Minecraft versions."
keywords = ["minecraft", "mc", "generation"]
categories = ["games", "mathematics"]
license = "Apache-2.0"

[dependencies]
mc-core = { path = "../core" }
mc-vanilla = { path = "../vanilla" }

[features]
default = ["release-1-2"]
release-1-2 = []
